gitops/storage/s3manager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s3manager
  namespace: storage
spec:
  selector:
    app: s3manager
  ports:
    - name: http
      port: 8080
      targetPort: 8080
