gitops/storage/s3manager/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: s3manager
  namespace: storage
spec:
  parentRefs:
    - name: eg
      namespace: lab-gateway
  hostnames:
    - "s3.127.0.0.1.nip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: s3manager
          port: 8080
